message(STATUS "Fetching SDL...")

if(BUILD_SHARED_LIBS)
	set(SDL_SHARED ON CACHE BOOL "" FORCE)
	set(SDL_STATIC OFF CACHE BOOL "" FORCE)
else()
	set(SDL_STATIC ON CACHE BOOL "" FORCE)
	set(SDL_SHARED OFF CACHE BOOL "" FORCE)
endif()
set(HAVE_LIBUNWIND_H OFF CACHE BOOL "" FORCE)

FetchContent_Declare(SDL
	GIT_REPOSITORY https://github.com/libsdl-org/SDL
	GIT_TAG 0bfeed061b10ea7dd37c88d9bae1824bad760f3a # 2.26.0
)

FetchContent_MakeAvailable(SDL)

if(BUILD_SHARED_LIBS)
	get_target_property(DONUT_SDL_INCLUDE_DIRS SDL2 INTERFACE_INCLUDE_DIRECTORIES)
	set_target_properties(SDL2 PROPERTIES INTERFACE_SYSTEM_INCLUDE_DIRECTORIES "${DONUT_SDL_INCLUDE_DIRS}")
	set(DONUT_PRIVATE_DEPENDENCIES ${DONUT_PRIVATE_DEPENDENCIES} SDL2 PARENT_SCOPE)
else()
	get_target_property(DONUT_SDL_INCLUDE_DIRS SDL2-static INTERFACE_INCLUDE_DIRECTORIES)
	set_target_properties(SDL2-static PROPERTIES INTERFACE_SYSTEM_INCLUDE_DIRECTORIES "${DONUT_SDL_INCLUDE_DIRS}")
	set(DONUT_PRIVATE_DEPENDENCIES ${DONUT_PRIVATE_DEPENDENCIES} SDL2-static PARENT_SCOPE)
endif()
set(DONUT_INTERFACE_DEPENDENCIES ${DONUT_INTERFACE_DEPENDENCIES} SDL2main PARENT_SCOPE)
