message(STATUS "Fetching glm...")

set(GLM_TEST_ENABLE OFF CACHE BOOL "" FORCE)
set(GLM_ENABLE_CXX_20 ON CACHE BOOL "" FORCE)

FetchContent_Declare(glm
	GIT_REPOSITORY https://github.com/g-truc/glm
	GIT_TAG 0af55ccecd98d4e5a8d1fad7de25ba429d60e863 # 1.0.1
)

FetchContent_MakeAvailable(glm)

target_compile_definitions(glm INTERFACE
	GLM_ENABLE_EXPERIMENTAL
	GLM_FORCE_XYZW_ONLY)

get_target_property(DONUT_GLM_INCLUDE_DIRS glm INTERFACE_INCLUDE_DIRECTORIES)
set_target_properties(glm PROPERTIES INTERFACE_SYSTEM_INCLUDE_DIRECTORIES "${DONUT_GLM_INCLUDE_DIRS}")

set(DONUT_PUBLIC_DEPENDENCIES ${DONUT_PUBLIC_DEPENDENCIES} glm PARENT_SCOPE)
