message(STATUS "Fetching physfs...")

set(PHYSFS_BUILD_TEST OFF CACHE BOOL "" FORCE)
if(BUILD_SHARED_LIBS)
    set(PHYSFS_BUILD_STATIC OFF CACHE BOOL "" FORCE)
    set(PHYSFS_BUILD_SHARED ON CACHE BOOL "" FORCE)
else()
    set(PHYSFS_BUILD_STATIC ON CACHE BOOL "" FORCE)
    set(PHYSFS_BUILD_SHARED OFF CACHE BOOL "" FORCE)
endif()

FetchContent_Declare(physfs
	GIT_REPOSITORY https://github.com/icculus/physfs
	GIT_TAG eb3383b532c5f74bfeb42ec306ba2cf80eed988c # 3.2.0
)

FetchContent_MakeAvailable(physfs)

if(BUILD_SHARED_LIBS)
    get_target_property(DONUT_PHYSFS_INCLUDE_DIRS physfs INTERFACE_INCLUDE_DIRECTORIES)
    set_target_properties(physfs PROPERTIES INTERFACE_SYSTEM_INCLUDE_DIRECTORIES "${DONUT_PHYSFS_INCLUDE_DIRS}")
    set(DONUT_PRIVATE_DEPENDENCIES ${DONUT_PRIVATE_DEPENDENCIES} physfs PARENT_SCOPE)
else()
    get_target_property(DONUT_PHYSFS_INCLUDE_DIRS physfs-static INTERFACE_INCLUDE_DIRECTORIES)
    set_target_properties(physfs-static PROPERTIES INTERFACE_SYSTEM_INCLUDE_DIRECTORIES "${DONUT_PHYSFS_INCLUDE_DIRS}")
    set(DONUT_PRIVATE_DEPENDENCIES ${DONUT_PRIVATE_DEPENDENCIES} physfs-static PARENT_SCOPE)
endif()
